# FoxNap

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  build.gradle  environment.yml  gradle.properties  launcher.py  pyproject.toml  rpg-build.bat  rpg-build.sh  run_integration_tests.py  setup.py
.github/workflows/: build.yml  build_mod.yml  build_rpg.yml  lint.yml
foxnap_rpg/: __init__.py  _version.py  builder.py  cli.py  config.py  data_generator.py  pack_generator.py  rpg_prototype.py  utils.py
foxnap_rpg/assets/: __init__.py
src/main/java/net/openbagtwo/foxnap/: FoxNap.java  FoxNapClient.java
src/main/java/net/openbagtwo/foxnap/config/: Config.java
src/main/java/net/openbagtwo/foxnap/discs/: Disc.java  DiscRegistry.java  DiscRenderer.java  Track.java
src/main/java/net/openbagtwo/foxnap/instruments/: InstrumentRegistry.java  LiterallyJustAGoatHorn.java  OrchestraInstrument.java  SecretlyJustAGoatHorn.java
src/main/java/net/openbagtwo/foxnap/integration/: BetterEnd.java
src/main/java/net/openbagtwo/foxnap/mixins/: JukeboxBlockEntityMixin.java
src/main/java/net/openbagtwo/foxnap/villagers/: Conductor.java  (+1 more)
src/main/resources/: fabric.mod.json  foxnap.accesswidener  records.mixins.json
src/main/resources/assets/foxnap/: sounds.json
src/main/resources/assets/foxnap/lang/: en_us.json
src/main/resources/data/foxnap/jukebox_song/: placeholder.json  track_1.json  track_2.json  track_3.json  track_4.json  track_5.json  track_6.json  track_7.json
tests/: test__init.py  test_builder.py  test_config.py  test_utils.py
(+38 files in other folders)
